# rpa_manipulador_de_PDF

rpa_manipulador_de_PDF/: main.py  pyproject.toml  update.spec
rpa_manipulador_de_PDF/src/: main.py  teste.py  update.py
rpa_manipulador_de_PDF/src/controller/: controller.py
rpa_manipulador_de_PDF/src/resources/: .env
rpa_manipulador_de_PDF/src/utils/: check_update.py  constants.py  dicionario.py  get_json.py  get_project_root.py
rpa_manipulador_de_PDF/src/utils/dotenv/: carregar_env.py  get_env_value.py  shift_string.py
rpa_manipulador_de_PDF/src/utils/functions/: __init__.py  f22.py  f25.py  f27.py  f30.py  f31.py
rpa_manipulador_de_PDF/src/utils/relatorio/: enviar_relatorio.py  get_nome_automacao.py  get_setor.py  get_token.py  gravar_registro.py  is_test.py  medir_tempo.py
rpa_manipulador_de_PDF/src/view/: menu_opcoes.py
