[project]
name = "rpa-manipulador-de-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=3.0.1",
    "pyinstaller>=6.19.0",
    "pypdf>=6.7.3",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
